[update] 정보게시판 틀 잡기

--- a/semiProject/.gitignore
+++ b/semiProject/.gitignore
@@ -1,4 +1,18 @@
-/.metadata/
+
 
 config.properties
+
+
+# ===== IDE (Eclipse / STS) =====
+.classpath
+.project
+.settings/
+.metadata/
+
+# ===== Gradle =====
+.gradle/
+build/
+bin/
+
+# ===== macOS =====
 .DS_Store
