[Update] development 충돌 오류 수정

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,4 @@
+/.metadata/
 
 config.properties
-
-
-# ===== IDE (Eclipse / STS) =====
-.classpath
-.project
-.settings/
-.metadata/
-
-# ===== Gradle =====
-.gradle/
-build/
-bin/
-
-# ===== macOS =====
 .DS_Store
