--- a/semiProject/.gitignore
+++ b/semiProject/.gitignore
@@ -1,18 +1,37 @@
-
-
-config.properties
-
-
-# ===== IDE (Eclipse / STS) =====
-.classpath
-.project
-.settings/
-.metadata/
-
-# ===== Gradle =====
-.gradle/
+HELP.md
+.gradle
 build/
-bin/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
 
-# ===== macOS =====
-.DS_Store
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+### VS Code ###
+.vscode/
