[FIX] 썸네일 업로드 문제

--- a/semiProject/src/main/resources/application.properties
+++ b/semiProject/src/main/resources/application.properties
@@ -19,3 +19,7 @@ logging.level.edu.kh.project=debug
 # URL에 jsessionid 가 보여질때 설정
 server.servlet.session.tracking-modes=cookie
 
+# 개별 파일당 최대 10MB
+spring.servlet.multipart.max-file-size=10MB
+# 전체 요청당 최대 20MB (썸네일 + 본문 이미지 등 합계)
+spring.servlet.multipart.max-request-size=20MB
